# COMP6741_ass2

./: CMakeLists.txt  LICENSE  README.md  availableList.h  branch.cpp  branch.h  brute.cpp  brute.h  gen_b.cpp  gen_b.h  gen_c.cpp  gen_types.h  graph_gen.cpp  progAss2.cpp
combinations/: combination.cpp  combination.h  main.cpp  main.cpp.bak
kernelisation/: COMP6741Ass2.cpp  graph_reduction.cpp  graph_reduction.h  graph_serialization.h  types.h
run/: 1411571077.dot  1412029930s.dot  1412036561s.dot  1412045282s.dot  1412045294s.dot  1412045295s.dot  1412045298s.dot  1412045318s.dot  1412045367s.dot  1412048400e.dot  1412048462e.dot  1412048700e.dot  1412048711e.dot  1412054447s.dot  1412054449s.dot  1412054451s.dot  1412055801e.dot  1412056031e.dot  Graph01.dot  Graph02.dot  Graph03.dot  Graph06.dot  Graph09.dot  graph.dot  test.dot
